# vigil

./: .dockerignore  .env.example  Dockerfile  README.md  backfill_author_commits.py  docker-compose.yml  populate_last_year.py  pyproject.toml  rebuild_clickhouse_commits.py  repair_author_commit_days.py
.dbwarden/: model_state.clickhouse.json  model_state.json
.dbwarden/schemas/: clickhouse__0002_add_commit_aggregates.schema.json  clickhouse__0003_add_agg_tables.schema.json  clickhouse__0004_reindex_repos_full_name.schema.json  clickhouse__0005_add_author_streak_table.schema.json
.github/workflows/: deploy.yml
app/: main.py
app/api/: routes.py
app/core/: __init__.py  config.py  databases.py  security.py
app/flow/: __init__.py  flow.py  tasks.py
app/models/: __init__.py  agg.py  commit.py  excluded_repo.py  repo.py  sync.py
app/services/: __init__.py  client.py  commits.py  github_contributions.py
migrations/clickhouse/: clickhouse__0002_add_commit_aggregates.plan.json  clickhouse__0002_add_commit_aggregates.sql  clickhouse__0002_offline_migration.plan.json  clickhouse__0002_offline_migration.sql  clickhouse__0003_add_agg_tables.plan.json  (+4 more)
scripts/: backfill_author_commit_days.py  backfill_author_commits.py  docker_entrypoint.py  populate_last_month.py  populate_last_year.py  rebuild_clickhouse_commits.py  repair_author_commit_days.py
tests/: test_backfill_author_commits.py  test_distinct_stats_queries.py  test_flow_boundary.py  test_hourly_range.py  test_ingestion_dedupe.py  test_overview_totals.py  test_streak_route.py
