[project]
name = "vigil"
version = "0.1.0"
description = "Personal GitHub Activity Prefect Flow"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "prefect>=3.7.4",
    "pygithub>=2.9.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
    "slowapi>=0.1.9",
    "dbwarden[clickhouse,fastapi]>=0.12.4",
]
